index-html alocado no lugar correto e correcoes feitas nos arquivos

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Component</title>
 
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,9 +28,9 @@
         <section class="card">
 
             <picture>
-                <source srcset="./images/image-product-mobile.jpg" media="(max-width: 600px)">
+                <source srcset="./src/images/image-product-mobile.jpg" media="(max-width: 600px)">
 
-                <img class="image" src="./images/image-product-desktop.jpg" alt="Scent image">
+                <img class="image" src="./src/images/image-product-desktop.jpg" alt="Scent image">
             </picture>
 
             <div class="information">
@@ -45,7 +45,7 @@
                 </div>
 
                 <button class="button">
-                    <img src="./images/icon-cart.svg" alt="Cart icon">
+                    <img src="./src/images/icon-cart.svg" alt="Cart icon">
                     <p class="text-button">Add to Cart</p>
                 </button>
 
